# image_slideshow

./: .gitignore  CONFIGURATION.md  README.md  api.py  config.ini  dashboard.html  database.py  main.py  pyproject.toml  run_tests.sh  setup.sh  slideshow.py  slideshow.service.template
providers/: __init__.py  base.py  immich.py
tests/: create_test_images.py  demo_gui.py  smoke_test.py  smoke_test_image_preview.py  test_api_endpoints.py  test_config_sync.py  test_gui.py  test_image_preview.py  test_providers.py  test_slideshow.py
